fix: spacing main, home, content

--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -1,12 +1,7 @@
 @use '../abstracts' as *;
 
 .mw-home {
-  min-height: 100dvh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  text-align: center;
 
   &-content {
     padding: spacing('6') spacing('2');
